--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ h1 {
 
 h2 {
     font-family: Dongle, Helvetica, sans-serif;
-    font-size: 40px;
+    font-size: 35px;
     font-weight: 400;
 }
 
@@ -55,7 +55,7 @@ body {
     text-decoration: underline;
 }
 
-/* removal of text decoration of love edinburgh link back to homepage */
+/* Removal of text decoration of love edinburgh link back to homepage */
 
 #logo {
     text-decoration: none;
@@ -63,7 +63,7 @@ body {
     font-size: 250%;
 }
 
-/* addition of navigation menu */
+/* Addition of navigation menu */
 
 #menu {
     font-family: Dongle, Helvetica, sans-serif;
@@ -76,7 +76,6 @@ body {
 #menu li {
     margin-left: 10px;
     margin-right: 10px;
-    /* margin-bottom: 0; */
     list-style-type: none;
     float: left;
     font-weight: 400;
@@ -92,10 +91,9 @@ body {
 
 #logo, #menu {
     line-height: 100px;
-    display: flex; 
+    display: flex;
     padding: 10px;
     position: relative;
-    /* height: 100px; */
 }
 
 /* addition of hover effect of navigation menu */
@@ -147,7 +145,6 @@ iframe {
 }
 
 /* addition of social media in footer and styling of footer */
-/* consider putting social media as ID instead */
 
 footer {
      height: 100px;
@@ -179,7 +176,7 @@ footer li {
     font-size: 200%;
 }
 
-/* addition of background image on events page */
+/* Addition of background image on events page */
 
 #events-outer {
     height: 1445px;
@@ -187,7 +184,7 @@ footer li {
     position: relative;
 }
 
-/* image from pexels.com - https://www.pexels.com/photo/silhouette-photography-of-people-on-theater-1714361/ */
+/* Image from pexels.com - https://www.pexels.com/photo/silhouette-photography-of-people-on-theater-1714361/ */
 
 #events-background {
     width: 100%;
@@ -223,8 +220,8 @@ footer li {
     float: right;
 }
 
-/* addition of hover effects of div elements on events page */
-/* code taken from inspiration from https://www.w3schools.com/css/css_image_transparency.asp */
+/* addition of hover effects of div elements on events page.
+Code taken from inspiration from https://www.w3schools.com/css/css_image_transparency.asp */
 
 #events-fringe:hover, #events-film:hover, #events-book:hover, #events-music:hover {
     opacity: 1;
@@ -233,7 +230,8 @@ footer li {
 /* styling of text of eat+drink page */
 
 #eat-text {
-    display: block; 
+    display: block;
+    padding: 20px; 
 }
 
 #eat-text>p {
@@ -242,7 +240,7 @@ footer li {
 
 #eat-text>h2, #eat-text>p {
     line-height: 30px;
-    text-align: left;
+    text-align: center;
     padding: 20px;
 }
 
@@ -251,7 +249,7 @@ footer li {
 #eat-container {
     display: flex;
     margin: auto;
-    position: relative; 
+    position: relative;
 }
 
 /* styling of img elements on eat+drink page */
@@ -301,7 +299,6 @@ footer li {
     text-align: center;
     margin: 0 auto; 
     padding: 40px;
-    /* position: relative; */
 }
 
 #travel-text>h2 {
@@ -309,7 +306,7 @@ footer li {
     padding: 15px;
 }
 
-/* Addition of image background for form on newsletter page 
+/* Addition of image background for form on newsletter page. 
 Image from pexels.com - https://www.pexels.com/photo/photo-of-live-concert-1540372/ */
 
 #form-image {
@@ -317,7 +314,6 @@ Image from pexels.com - https://www.pexels.com/photo/photo-of-live-concert-15403
     height: 800px;
     background: url('../images/newsletter-signup.jpg') no-repeat center center;
     background-size: cover;
-    /* position: relative; */
 }
 
 #form-text-container {
@@ -330,16 +326,14 @@ Image from pexels.com - https://www.pexels.com/photo/photo-of-live-concert-15403
     opacity: 0.9;
     padding: 10px;
     line-height: 30px;
-    /* position: absolute; */
 }
 
 /* Styling of inputs and associated labels on newsletter page */
 
-/* newsletter form only used in responsive design if you comment this out - is this okay? */
-/* #newsletter-form {
+#newsletter-form {
     width: auto;
     height: auto;
-}  */
+}  
 
 #signup-button {
     height: 20px;
@@ -360,7 +354,7 @@ label {
 @media screen and (max-width: 2000px) {
 
     #form-text-container {
-        width: 40%;
+        width: auto;
         margin: 0 auto;
         position: absolute;
     }
@@ -406,13 +400,6 @@ label {
         font-size: 0.85em; 
     }
 
-    /* might want to align sign up button */
-/* 
-    .signup-button {
-        margin-left: 10px;
-    } */
-
-
     #form-text-container {
         width: 100%;
         height: 200px;
@@ -424,7 +411,7 @@ label {
 
 }
 
-@media screen and (max-width: 972px) {
+@media screen and (max-width: 976px) {
 
    h1 {
         font-size: 1.6em;
@@ -449,7 +436,6 @@ label {
         font-size: 0.9em;
         margin-left: 5px;
         margin-right: 3px;
-        /* letter-spacing: 2px; */
     }
 
     #intro-text {
@@ -478,7 +464,7 @@ label {
     #travel-text {
         font-size: 0.5em;
     }
-/* might want to tidy up code below */
+
     #events-fringe>p, #events-film>p, #events-book>p, #events-music>p {
     font-size: 0.9em;
     }
@@ -537,8 +523,7 @@ label {
 
 }
 
-@media screen and (max-width: 820px) {
-
+@media screen and (max-width: 834px) {
 
     #nav-logo {
         height: 90px;
@@ -578,11 +563,11 @@ label {
     }
 
     #travel-text>h2 {
-        font-size: 0.9em;
+        font-size: 1.2em;
     }
 
     #travel-text>p {
-        font-size: 0.7em;
+        font-size: 0.9em;
     }
 
     #eat-text {
@@ -602,11 +587,23 @@ label {
         height: auto;
     }
 
+    #form-text-container {
+        font-size: 25px;
+    }
+
+}
+
+@media screen and (max-width: 534px) {
+
+    #travel-container {
+        width: 100%;
+        margin: 0 auto;
+    }
+
 }
 
 
-
-@media screen and (max-width: 350px) {
+@media screen and (max-width: 370px) {
 
     h1 {
         font-size: 1em;
@@ -626,11 +623,9 @@ label {
 
     #menu>li {
         font-size: 0.8em;
-        margin-left: 1px;
+        margin-left: 3px;
         margin-right: 3px;
         letter-spacing: 0.2px; 
-        /* display: -ms-inline-grid;
-        grid-row: 2; */
     }   
 
     h2 {
@@ -640,10 +635,10 @@ label {
     h3 {
         font-size: 0.9em;
     }
-
+    
     #logo-container {
         justify-content: center;
-    }
+     }
 
     #intro-text {
         font-size: 1.2em;
@@ -683,7 +678,8 @@ label {
 
     #eat-text {
         font-size: 20px;
-        width: 110%;
+        width: 100%;
+        padding: 0;
     }
 
     #eat-text>h2 {
